feat[swagger]: campaign road /campaign/dm and /campaign
